--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Fugitive slaves -- Legal status, laws, etc. -- Massachusetts -- Boston'
 - !lcsh 'Davis, Charles G. (Charles Gideon), 1820-1903 -- Trials, litigation, etc.'
 - !lcsh 'United States. Fugitive slave law (1850)'
+- GITenberg
 title: 'Report of the Proceedings at the Examination of Charles G. Davis, Esq., on
   the Charge of Aiding and Abetting in the Rescue of a Fugitive Slave: Held in Boston,
   in February, 1851.'
